deploy: 2236280fcffb53b59cefe31e92a7702301f9d79c

--- a/print.html
+++ b/print.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light" dir="ltr">
+<html lang="cn" class="light" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="介绍.html">介绍</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,7 +174,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
+<p>本文将描述如何实现一个推箱子游戏, 代码示例使用 Rust 语言编写.
+推箱子游戏具有以下特点:</p>
+<ul>
+<li>规则简单. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
+<li>基本功能易于实现.</li>
+<li>有具有挑战的高级功能. 比如纯鼠标控制(也称为点推), 逆推等.</li>
+<li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
+</ul>
+<p>本文将由浅入深的介绍上面功能并提供实现的思路.</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
