--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="介绍.html">介绍</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/parse.html"><strong aria-hidden="true">1.1.</strong> 解析</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -184,6 +184,46 @@
 <li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
 </ul>
 <p>本文将由浅入深的介绍上面功能并提供实现的思路.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="关卡"><a class="header" href="#关卡">关卡</a></h1>
+<p>推箱子关卡使用最广泛的格式为 XSB, 最初由 XSokoban 所使用. 该格式使用 ASCII 字符来表示地图元素, 支持注释和附加元数据.<br />
+以关卡 <code>Boxworld #1</code> 为例, 其 XSB 格式关卡的数据如下:</p>
+<pre><code class="language-txt">;Level 1
+__###___
+__#.#___
+__#-####
+###$-$.#
+#.-$@###
+####$#__
+___#.#__
+___###__
+Title: Boxworld 1
+Author: Thinking Rabbit
+</code></pre>
+<ul>
+<li>第 1 行, 以 <code>;</code> 开头的单行注释.</li>
+<li>第 2-9 行, 使用 ASCII 字符表示的地图数据.</li>
+<li>第 10-11 行, 包括关卡标题和作者的元数据.</li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th>ASCII 符号</th><th>描述</th></tr></thead><tbody>
+<tr><td><code>&lt;SPACE&gt;</code>/<code>-</code>/<code>_</code></td><td>Floor</td></tr>
+<tr><td><code>#</code></td><td>Wall</td></tr>
+<tr><td><code>$</code></td><td>Box</td></tr>
+<tr><td><code>.</code></td><td>Goal</td></tr>
+<tr><td><code>@</code></td><td>Player</td></tr>
+<tr><td><code>+</code></td><td>Player on goal</td></tr>
+<tr><td><code>*</code></td><td>Box on goal</td></tr>
+</tbody></table>
+</div>
+<p>关卡数据可分为三个部分: 地图数据, 元数据和注释. 其中注释可以作为元数据.<br />
+元数据是一个键值对的集合, 因此可以使用 HashMap 来存储.
+可以使用下面的结构体存储关卡数据:</p>
+<pre><code class="language-rs">pub struct Level {
+    map: Map,
+    metadata: HashMap&lt;String, String&gt;,
+    ... SKIP ...
+}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="解析"><a class="header" href="#解析">解析</a></h1>
 
                     </main>
 
