--- a/level/normalization.html
+++ b/level/normalization.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/parse.html"><strong aria-hidden="true">1.1.</strong> 解析</a></li><li class="chapter-item expanded "><a href="../level/normalization.html" class="active"><strong aria-hidden="true">1.2.</strong> 标准化</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/parse.html"><strong aria-hidden="true">1.1.</strong> 解析</a></li><li class="chapter-item expanded "><a href="../level/normalization.html" class="active"><strong aria-hidden="true">1.2.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">2.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,7 +174,51 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>TODO</p>
+<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.
+标准化可以将关卡中与求解无关/无用的元素去除, 这有利于本质相同的关卡的去重.</p>
+<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡.</p>
+<p>关卡的标准化可以分为以下几个步骤:</p>
+<ol>
+<li>
+<p>将不可移动的箱子变为墙.</p>
+<p>箱子可能默认就处于死锁状态, 所以可以当作墙体处理.</p>
+</li>
+<li>
+<p>将无需使用的地板变为墙.</p>
+<p>被且仅被三面墙包围的地板是死胡同, 可以当作墙处理.</p>
+</li>
+<li>
+<p>去除无法到达的墙.</p>
+<p>无法于玩家产生交互, 因此删除不影响关卡的解决方案.</p>
+</li>
+<li>
+<p>标准化外墙.</p>
+<p>外墙有不同的包围类型, 如:</p>
+<pre><code class="language-txt"> ###    #####
+#@$.#   #@$.#
+ ###    #####
+</code></pre>
+<p>应该统一为其中一种类型, 通常标准化为右边的类型.</p>
+</li>
+<li>
+<p>去除无法到达的箱子.</p>
+<p>无法于玩家产生交互, 因此删除不影响关卡的解决方案.</p>
+</li>
+<li>
+<p>收紧地图尺寸.</p>
+<p>地图中的元素被删除可能导致地图尺寸缩小.</p>
+</li>
+<li>
+<p>对旋转和翻转进行标准化.</p>
+<p>将经过不同旋转和翻转的关卡标准化为同一个关卡.
+一个简单的方法是对不同旋转和翻转的地图求哈希值, 然后选择哈希值最小的地图.</p>
+</li>
+<li>
+<p>玩家初始位置标准化.</p>
+<p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
+一个简单的玩家位置标准化方法是将玩家的位置设为可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
+</li>
+</ol>
 <h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
 <p>激进的标准化可能改变关卡的解.
 以最简单的关卡为例:</p>
@@ -202,6 +246,9 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../glossary.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -213,6 +260,9 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../glossary.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
