deploy: 5d438e63c88cd4d02bc30a59b907edf56cb8ba1b

--- a/level/normalization.html
+++ b/level/normalization.html
@@ -211,7 +211,7 @@
 <li>
 <p>对旋转和翻转进行标准化.</p>
 <p>将经过不同旋转和翻转的关卡标准化为同一个关卡.
-一个简单的方法是对不同旋转和翻转的地图求哈希值, 然后选择哈希值最小的地图.</p>
+一个简单的方法是计算不同旋转和翻转后地图的哈希值，选择哈希值最小的版本.</p>
 </li>
 <li>
 <p>玩家初始位置标准化.</p>
