deploy: b580b3467629212248a1b0692cd9ccd5fb6a92bb

--- a/level/parse_level.html
+++ b/level/parse_level.html
@@ -259,8 +259,7 @@
         Ok(Self {
             map: Map::from_str(&amp;map_string)?,
             metadata,
-            actions: Actions::default(),
-            undone_actions: Actions::default(),
+            // ... SKIP ...
         })
     }
     // ... SKIP ...
