--- a/print.html
+++ b/print.html
@@ -383,8 +383,7 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
         Ok(Self {
             map: Map::from_str(&amp;map_string)?,
             metadata,
-            actions: Actions::default(),
-            undone_actions: Actions::default(),
+            // ... SKIP ...
         })
     }
     // ... SKIP ...
