--- a/level/parse_level.html
+++ b/level/parse_level.html
@@ -188,8 +188,7 @@
                 map_offset += line.len();
             }
 
-            let trimmed_end_line = line.trim_end();
-            let trimmed_line = trimmed_end_line.trim_start();
+            let trimmed_line = line.trim();
             if trimmed_line.is_empty() {
                 continue;
             }
@@ -234,10 +233,10 @@
             }
 
             // Discard line that are not map data (with RLE)
-            if !is_xsb_string(trimmed_end_line) {
+            if !is_xsb_string(trimmed_line) {
                 if map_len != 0 {
                     return Err(ParseMapError::InvalidCharacter(
-                        trimmed_end_line
+                        trimmed_line
                             .chars()
                             .find(|&amp;c| !is_xsb_symbol_with_rle(c))
                             .unwrap(),
